@@ -13,4 +13,5 @@
      - Apache Software Foundation (http://www.apache.org/).
      - W3C
      - Scott Garland
+     - The Android Open Source Project
 
