@@ -5,4 +5,5 @@ Thanks to:
 - Williams Technologies Limited for mature Kajabity Java Tools
 - Apache Santuario Project
 - Apache Kafka Project
+- The Android Open Source Project
 
